# mosme

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ConfigStorage.cpp  ConfigStorage.h  MosmeApp.cpp  MosmeApp.h  main.cpp
src/exceptions/: NotSupportedException.cpp  NotSupportedException.h
src/json/: ConversionImpl.cpp  JsonUtils.h
src/network/: HostCustomisedProfile.h  HostProfile.h  Memo.h  User.h
src/network/API/: APIAccess.cpp  APIAccess.h  APILoopThread.cpp  APILoopThread.h  APIRequest.cpp  APIRequest.h  APIRequestCompletionState.h  APIState.h  IAPIProvider.h  ICanPerform.cpp  ICanPerform.h  ReplyingAPIRequest.cpp  ReplyingAPIRequest.h
src/network/API/requests/: GetMemosRequest.cpp  GetMemosRequest.h  GetStatusRequest.cpp  GetStatusRequest.h  GetUserMeRequest.cpp  GetUserMeRequest.h  PostAuthSignInRequest.cpp  PostAuthSignInRequest.h
src/network/API/requests/responses/: GetMemosResponse.h  GetStatusResponse.h
src/serialisation/: ISerialisable.cpp  ISerialisable.h
src/ui/: IModelBackedWidget.cpp  IModelBackedWidget.h  MemoListItem.cpp  MemoListItem.h  MemoListItem.ui  ModelBackedWidget.cpp  ModelBackedWidget.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
